# nextar

./: .gitignore  .tags  .tags1  README.md
source/: CMakeLists.txt
source/.kdev4/: source.kdev4
source/AssetImport/: CMakeLists.txt
source/AssetImport/FbxMeshImporter/: CMakeLists.txt
source/AssetImport/FbxMeshImporter/local_include/: FbxImportedMesh.h  FbxMeshLoaderImplv10.h
source/AssetImport/FbxMeshImporter/src/: FbxImportedMesh.cpp  FbxMeshImporterApp.cpp  FbxMeshLoaderImplv10.cpp
source/AssetImport/FbxMeshImporterApp/: CMakeLists.txt
source/AssetImport/FbxMeshImporterApp/local_include/: FbxMeshImporterApp.h
source/CMake/: nextar-git - Shortcut.lnk
source/CMake/Modules/: FindFBX.cmake  FindLIBJPEG.cmake  FindPNG.cmake  FindTBB.cmake  FindZLIB.cmake
source/CMake/Scripts/: BuildConfig_All.txt  BuildConfig_Engine.txt  BuildConfig_ProjectModel.txt
source/Core/: CMakeLists.txt
source/Core/Base/: CMakeLists.txt
source/Core/Base/include/: Allocators.h  Any.h  AppImpl.h  ApplicationContext.h  ApplicationContextType.h  Archive.h  BackgroundStreamer.h  BaseConfig.h  BaseHeaders.h  BaseTypes.h  BaseUtils.h  BoundingVolume.h  Buffer.h  Clock.h  Color.h  CommonPools.h  CompressedArchive.h  Config.h  Containers.h  Convert.h  DataStream.h  Directory.h  Disposer.h  Endian.h  EnumMacros.h  ErrorDefs.h  EventDispatcher.h  FactoryPlugin.h  FileSystem.h  FrameListener.h  FrameTimer.h  Frustum.h  GenericStreams.h  Intersect.h  JobQueue.h  Logger.h  MathBase.h  MathConfig.h  MathTypes.h  MemPool.h  (+44 more)
source/Core/Base/local_include/: BackgroundStreamerImpl.h  CompressedArchive.h  Config.h.cmake  Directory.h  MemTracker.h  MemoryTracker.h  ZipArchive.h  ZipHeaders.h  malloc.c.h  nedmalloc.h  nedmalloc_c.h
source/Core/Base/src/: Allocators.cpp  ApplicationContext.cpp  BackgroundStreamer.cpp  BoundingVolume.cpp  Clock.cpp  Color.cpp  CommonPools.cpp  CompressedArchive.cpp  Config.cpp  Convert.cpp  DataStream.cpp  Directory.cpp  EventDispatcher.cpp  FileSystem.cpp  FrameTimer.cpp  Frustum.cpp  GenericStreams.cpp  Intersect.cpp  Logger.cpp  MemTracker.cpp  MemoryManager.cpp  MemoryTracker.cpp  MurmurHash3.cpp  NamedObject.cpp  NexException.cpp  NexMath.cpp  NexXml.cpp  Platform.cpp  PluginRegistry.cpp  PropertyInterface.cpp  RenderWindow.cpp  ScriptParser.cpp  Serializer.cpp  SharedObjectTracker.cpp  StreamLexer.cpp  StringInternTable.cpp  StringUtils.cpp  Task.cpp  TaskScheduler.cpp  URL.cpp  (+3 more)
source/Core/Engine/: CMakeLists.txt
source/Core/Engine/include/: Asset.h  AssetStreamer.h  BVCullingSystem.h  BaseRenderContext.h  BaseRenderDriver.h  Behavior.h  Behaviour.h  BlendState.h  BufferManager.h  Camera.h  CommitContext.h  Component.h  ComponentArchive.h  ComponentFactoryArchive.h  ComponentGroupArchive.h  ComponentGroupSet.h  ConstantBuffer.h  ContainerNode.h  ContextObject.h  CullingSystem.h  DebugDisplay.h  DepthStencilState.h  EffectAsset.h  EngineApplicationContext.h  EngineConfig.h  EngineHeaders.h  Entity.h  Geometry.h  GeometryServices.h  GpuBuffer.h  GpuProgram.h  Image.h  IndexBuffer.h  InputController.h  InputManager.h  KeyCode.h  KeyCode.h.gch  KeyName.h  Light.h  LightCamera.h  (+55 more)
source/Core/Engine/local_include/: CommonMeshLayouts.h  Config.h.cmake  DebugDisplayImpl.h  DefaultLightSystem.h  InputManagerImpl.h  RenderInfo_Material.h  TaskRunner.h
source/Core/Engine/src/: Asset.cpp  AssetStreamer.cpp  BVCullingSystem.cpp  BaseRenderContext.cpp  BaseRenderDriver.cpp  Behavior.cpp  Behaviour.cpp  BufferManager.cpp  Camera.cpp  CommitContext.cpp  Component.cpp  ComponentArchive.cpp  ComponentFactoryArchive.cpp  ComponentGroupArchive.cpp  ComponentGroupSet.cpp  ConstantBuffer.cpp  ContainerNode.cpp  ContextObject.cpp  CullingSystem.cpp  DebugDisplay.cpp  DebugDisplayImpl.cpp  DebugInfo.cpp  DefaultLightSystem.cpp  DeferredRenderSystem.cpp  EffectAsset.cpp  EngineApplicationContext.cpp  Entity.cpp  Geometry.cpp  GeometryServices.cpp  GpuBuffer.cpp  GpuProgram.cpp  Image.cpp  IndexBuffer.cpp  InputController.cpp  InputManagerImpl.cpp  Light.cpp  LightNode.cpp  LightSystem.cpp  ManagedBuffer.cpp  Material.cpp  (+43 more)
source/Core/LibNexTech/: CMakeLists.txt
source/Core/LibNexTech/include/: Allocators.h  ApplicationContext.h  Archive.h  Asset.h  AssetStreamer.h  BVCullingSystem.h  BackgroundStreamer.h  BaseRenderContext.h  Camera.h  (+112 more)
source/Core/NeoCmd/: CMakeLists.txt
source/Core/NeoScript/: CMakeLists.txt
source/Core/ProjectModel/: CMakeLists.txt
source/Core/RenderEngine/: CMakeLists.txt
source/Core/RenderSystem/: CMakeLists.txt
source/Core/ScriptParser/: CMakeLists.txt
source/Data/: CMakeLists.txt
source/Data/Configs/: Config.cfg  MockRenderConfig.neoscript  RenderConfig.neoscript
source/Data/Docs/: PassScript.h  ShaderScript.h
source/Data/Material/: ExampleMaterials.mtl
source/Data/Shaders/: Deferred.nfx  DeferredLocalLights.nfx  OldCommandList.nfx
source/Data/Textures/: Angel.tga  Bottle.dds  Globe.dds  Painting.dds  Tree.dds
source/Plugins/: CMakeLists.txt
source/Plugins/FbxMeshImporter/: CMakeLists.txt
source/Plugins/ImageLoader/: CMakeLists.txt
source/Plugins/InputService/: CMakeLists.txt
source/Plugins/MaterialCompiler/: CMakeLists.txt
source/Plugins/MaterialLoader/: CMakeLists.txt
source/Plugins/MaterialScript/: CMakeLists.txt
source/Plugins/MeshLoader/: CMakeLists.txt
source/Plugins/PBRenderEngine/: CMakeLists.txt
source/Plugins/RenderOpenGL/: CMakeLists.txt
source/Plugins/RenderSystemScript/: CMakeLists.txt
source/Plugins/ResourcePacker/: CMakeLists.txt
source/Plugins/ShaderCompiler/: CMakeLists.txt
source/Plugins/ShaderLoader/: CMakeLists.txt
source/Plugins/ShaderScript/: CMakeLists.txt
source/Plugins/SimpleBehaviours/: CMakeLists.txt
source/UnitTests/: CMakeLists.txt
source/UnitTests/Base.tst/: CMakeLists.txt
source/UnitTests/Engine.tst/: CMakeLists.txt
source/UnitTests/External.tst/: CMakeLists.txt
source/UnitTests/LibNexTech.tst/: CMakeLists.txt
source/UnitTests/NeoScript.tst/: CMakeLists.txt
source/UnitTests/ProjectModel.tst/: CMakeLists.txt
source/UnitTests/RenderEngine.tst/: CMakeLists.txt
(+1129 files in other folders)
